--- a/dictateningprov2/app/src/main/res/values/strings.xml
+++ b/dictateningprov2/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">dictateningprov2</string>
     <string name="action_settings">Settings</string>
     <string name="action_exit">Exit</string>
+    <string name="select_this_file">Select</string>
 </resources>
