--- a/dictateningprov2/app/src/main/res/values/strings.xml
+++ b/dictateningprov2/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">dictateningprov2</string>
-    <string name="action_settings">Settings</string>
+    <string name="select_file">Open a file</string>
     <string name="action_exit">Exit</string>
     <string name="select_this_file">Select</string>
+    <string name="save_text_only">Save text only</string>
+    <string name="enter_file_name">File Name:</string>
 </resources>
