--- a/dictateningprov2/app/src/main/res/values/strings.xml
+++ b/dictateningprov2/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="select_file">Open a file</string>
     <string name="action_exit">Exit</string>
     <string name="select_this_file">Select</string>
-    <string name="save_text_only">Save text only</string>
+    <string name="save_text_only">Save</string>
     <string name="enter_file_name">File Name:</string>
+    <string name="clear_text">Clear</string>
 </resources>
